--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -198,3 +198,8 @@
   margin-bottom: 0;
   font-weight: 600;
 }
+
+.btn:disabled {
+  box-shadow: #000000 0 3px 7px inset;
+  transform: translateY(2px);
+}
